--- a/stylesubicacion.css
+++ b/stylesubicacion.css
@@ -504,7 +504,7 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .modal-content-fin button:hover {
-    background-color: #c29502; /* Azul más oscuro al pasar el ratón */
+    background-color: #bda557; /* Azul más oscuro al pasar el ratón */
 }
 
 
